2002-06-13  Mark Mitchell  <mark@codesourcery.com>

	* qm/common.py (MethodShouldBeOverriddenError): Remove.
	* qm/test/qmtest.py: Handle NotImplementedError specially.
	* qm/test/share/messages/diagnostics.txt (not implemented): New
	error message.
	* qm/attachment.py: Use NotImplementedError, not
	MethodShouldBeOverriddenError.
	* qm/fields.py: Likewise.
	* qm/user.py: Likewise.
	* qm/test/command_thread.py: Likewise.
	* qm/test/database.py: Likewise.
	* qm/test/file_database.py: Likewise.
	* qm/test/resource.py: Likewise.
	* qm/test/result_stream.py: Likewise.
	* qm/test/target.py: Likewise.
	* qm/test/test.py: Likewise.
	
	* NEWS: Mention --version option.
	* qm/test/doc/reference.xml: Add --version description.
	* GNUmakefile.in: Fix typo in comment.
	* qm/cmdline.py (CommandParser.__init__): Do not raise exceptions
	on invalid input.
	* qm/common.py (program_name): Initialize it to 'None'.
	* qm/setup_path.py.in (major_version): New variable.
	(minor_version): Likewise.
	(release_version): Likewise.
	* qm/test/cmdline.py (QMTest.version_option_spec): New variable.
	(QMTest.global_options_spec): Add it.
	(QMTest.__version_output): New variable.
	(QMTest.__init__): Add version number parameters.
	(QMTest.__Execute): Handle --version.
	(QMTest._GetVersionString): New method.
	* qm/test/qmtest.py: Remove duplicate import.  Reorder exception
	handling clauses.

	* NEWS: Mention that --random is no longer the default.
	* qm/test/doc/reference.xml: Update accordingly.
	
	* qm/common.py (shuffle): Remove.
	* qm/test/cmdline.py (whrandom): Do not import.
	(random): Import.
	(QMTest.random_option_spec): New option.
	(QMTest.commands_spec): Use it.
	(QMTest.__ExecuteRun): Only randomize test order if --random is
	present.
	* qm/test/execution_engine.py (ExecutionEngine._RunTests):
	Preserve the order that tests were presented in the test queues.

	* qm/fields.py (Field.__init__): Remove check for valid labels.