@@ -1,3 +1,12 @@
+2002-06-17  Mark Mitchell  <mark@codesourcery.com>
+
+	* qm/common.py (sequence_difference): Remove.
+	(make_map_from_list): Likewise.
+	(purge_keys): Likewise.
+	* qm/test/file_database.py (FileDatabase._GetLabels): Use
+	JoinLabels, not qm.label.join.
+	* qm/test/share/dir.dtml: Remove insertion of "." before test name.
+
 2002-06-13  Mark Mitchell  <mark@codesourcery.com>
 
 	* qm/common.py (MethodShouldBeOverriddenError): Remove.
